--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,4 +1,5 @@
-//AngularJS
+
+script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.js')
 script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
 script(type='text/javascript', src='/lib/angular-resource/angular-resource.js')
@@ -11,6 +12,15 @@ script(type='text/javascript', src='/lib/angular-ui-utils/modules/route/route.js
 script(type='text/javascript', src='/lib/satellizer/satellizer.min.js')
 script(type='text/javascript', src='/js/FbSdk.js')
 script(type='text/javascript', src='/lib/social/angular-fblogin.js')
+
+script(type='text/javascript', src='/js/states/dashboard/stateService.js')
+
+script(type='text/javascript', src='/js/states/dashboard/cinemaPlan.js')
+script(type='text/javascript', src='/js/states/dashboard/movieList.js')
+script(type='text/javascript', src='/js/states/dashboard/movieItem.js')
+script(type='text/javascript', src='/js/states/dashboard/index.js')
+script(type='text/javascript', src='/js/states/login/index.js')
+
 
 //Application Init
 script(type='text/javascript', src='/js/app.js')
