UI doesnt crush

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -14,8 +14,8 @@ script(type='text/javascript', src='/js/FbSdk.js')
 script(type='text/javascript', src='/lib/social/angular-fblogin.js')
 
 script(type='text/javascript', src='/js/states/dashboard/stateService.js')
-
 script(type='text/javascript', src='/js/states/dashboard/cinemaPlan.js')
+script(type='text/javascript', src='/js/states/dashboard/confirm.js')
 script(type='text/javascript', src='/js/states/dashboard/movieList.js')
 script(type='text/javascript', src='/js/states/dashboard/movieItem.js')
 script(type='text/javascript', src='/js/states/dashboard/index.js')
