move move table to componentx

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -14,6 +14,7 @@ script(type='text/javascript', src='/js/FbSdk.js')
 script(type='text/javascript', src='/lib/social/angular-fblogin.js')
 
 script(type='text/javascript', src='/js/states/dashboard/stateService.js')
+script(type='text/javascript', src='/js/states/dashboard/moviesComponent.js')
 script(type='text/javascript', src='/js/states/dashboard/cinemaPlan.js')
 script(type='text/javascript', src='/js/states/dashboard/confirm.js')
 script(type='text/javascript', src='/js/states/dashboard/movieList.js')
