--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -4,6 +4,8 @@ script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
 script(type='text/javascript', src='/lib/angular-resource/angular-resource.js')
 script(type='text/javascript', src='/lib/angular-ui-router/release/angular-ui-router.min.js')
+script(type='text/javascript', src='//connect.facebook.net/en_US/all.js')
+
 
 //Angular UI
 script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap.js')
@@ -16,6 +18,7 @@ script(type='text/javascript', src='/lib/socketio/socket.io.min.js')
 script(type='text/javascript', src='/lib/angular-socket-io/socket.js')
 
 
+script(type='text/javascript', src='/js/facebookService.js')
 script(type='text/javascript', src='/js/states/dashboard/stateService.js')
 script(type='text/javascript', src='/js/states/dashboard/moviesComponent.js')
 script(type='text/javascript', src='/js/states/dashboard/cinemaPlan.js')
