move tacked places to backend

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -20,6 +20,7 @@ script(type='text/javascript', src='/lib/angular-socket-io/socket.js')
 
 script(type='text/javascript', src='/js/facebookService.js')
 script(type='text/javascript', src='/js/states/dashboard/stateService.js')
+script(type='text/javascript', src='/js/states/dashboard/socketService.js')
 script(type='text/javascript', src='/js/states/dashboard/moviesComponent.js')
 script(type='text/javascript', src='/js/states/dashboard/cinemaPlan.js')
 script(type='text/javascript', src='/js/states/dashboard/confirm.js')
