--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -2,4 +2,5 @@ head
   title='app-cinema'
   link(rel='stylesheet', href='/lib/bootstrap/bootstrap.css')
   link(rel='stylesheet', href='/lib/bootstrap/bootstrap-theme.css')
+  link(rel='stylesheet', href='/css/styles.css')
 
